@@ -2,7 +2,6 @@ Game Logic
 - Make isLegalMove more efficient
 
 Animation/UI
-- For castling, make the rook move after the king moves if possible
 - Menu when starting up applet
 - Display something when the game ends
 
