@@ -1,3 +1,5 @@
+package chess;
+
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
 
