@@ -1,3 +1,5 @@
+package chess;
+
 import java.util.ArrayList;
 
 public class Knight extends Piece
